manda a la pagina home con click

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -33,6 +33,6 @@
 
 </ion-list> 
     
-   <button ion-button>Continuar</button>
+   <button (click)="clickHome()" ion-button>Continuar</button>
 
 </ion-content>
